# Rynet

./: .gitignore  Cargo.toml  README.md  __init__.py  linear.pyi  makefile  nn.pyi  pyproject.toml  rnet.pyi  test.ipynb  test.py
Tests/: tools.py
rnet/: Cargo.toml  __init__.py  __init__.pyi  lib.include  linear.py  loss.py  neural.py  nn.py  nn.pyi  rnet.cp311-win_amd64.pyd  rnet.py  rnet.pyi  tensor.py  tensor.pyi
rnet/loss/: __init__.py  __init__.pyi  _mse.pyi
rnet/nn/: __init__.py  __init__.pyi  _layer.pyi  _linear.py  _linear.pyi  _neural.pyi  nn.py  nn.pyi
rnet/rnet/: rnet.cp311-win_amd64.pyd
rnet/src/: lib.rs  linear.rs  model.rs  neuaral.rs  neural.rs  nn.rs  types.rs
rnet/src/nn/: linear.rs  mod.rs
rnet/src/rnet/: rnet.cp311-win_amd64.pyd
rntet/: __init__.py  layer.py  loss.py  nn.py
src/: functions.rs  layer.rs  lib.rs  linear.rs  loss.rs  loss_functions.rs  main.rs  model.rs  neuaral.rs  nn.rs  optimizers.rs  tensor.rs  tools.rs  types.rs
