[package]
name = "RyNet"
version = "0.1.0"
edition = "2021"
authors = ["<NAME> <EMAIL>"]
description = "Neural Network Library"
repository = "https://github.com/amirhu37/nn"
license = "MIT"
documentation = "https://docs.rs/nn"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = 'rnet'
# "cdylib" is necessary to produce a shared library for Python to import from.
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib", "rlib"]


[package.metadata.maturin]
include = ["rnet/*.pyi", "rnet/*.py" ]


[dependencies]
ndarray = "0.15.6"
rand = "0.8"
 
numpy = "0.21.0"
ndarray-linalg = "0.16.0"

[dependencies.pyo3]
version = "0.21.0"
features = ["auto-initialize", "extension-module"]



