[package]
name = "RyNet"
version = "0.1.0"
edition = "2021"
authors = ["<NAME> <EMAIL>"]
description = "Neural Network Library"
repository = "https://github.com/amirhu37/nn"
license = "MIT"
documentation = "https://docs.rs/nn"


[lib]
name = 'rnet'
proc-macro = false
crate-type = [ "rlib" , "cdylib"]
path = "src/lib.rs"

[lib.include]
nn = "src/nn.rs"


[dependencies]
ndarray = "0.15.6"
rand = "0.8"
derive_more = { version = "0.99.18", features = ["display", "default"] }
pyo3 = { version = "0.21.0", features = ["extension-module", "auto-initialize"] }
numpy = { version = "0.21.0" }
ndarray-linalg = "0.16.0"




