[package]
name = "RyNet"
version = "0.1.0"
edition = "2021"
authors = ["<NAME> <EMAIL>"]
description = "Neural Network Library"
repository = "https://github.com/amirhu37/nn"
license = "MIT"
documentation = "https://docs.rs/nn"


[lib]
name = 'rnet'
proc-macro = false
crate-type = [  "cdylib"]
path = "src/lib.rs"

[lib.include]
nn = "src/nn"


[dependencies]
ndarray = "0.15.6"
rand = "0.8"
 
numpy = "0.21.0"
ndarray-linalg = "0.16.0"

[dependencies.pyo3]
version = "0.21.0"
features = ["auto-initialize", "extension-module"]



